--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -60,11 +60,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="vmx-RB-Fbu" customClass="TweetTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="375" height="120"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="200" id="vmx-RB-Fbu" customClass="TweetTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vmx-RB-Fbu" id="Okw-UV-otG">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b9U-iO-C17">
@@ -81,25 +81,66 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DQW-5N-PoT">
-                                            <rect key="frame" x="73" y="30" width="286" height="79"/>
+                                            <rect key="frame" x="73" y="26" width="286" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gUF-5R-JTe" userLabel="retweetButton">
+                                            <rect key="frame" x="279" y="149" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="Sys-Iq-53M"/>
+                                                <constraint firstAttribute="height" constant="30" id="ml9-oF-ZIQ"/>
+                                            </constraints>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="retweet-icon" title=""/>
+                                            <connections>
+                                                <action selector="retweet:" destination="vmx-RB-Fbu" eventType="touchUpInside" id="KH2-Cl-pnc"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="15 minutes ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6L-pJ-lpo" userLabel="Time Label">
+                                            <rect key="frame" x="259" y="-3" width="92" height="16"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qCf-LP-zXR" userLabel="favButton">
+                                            <rect key="frame" x="319" y="149" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="JYt-9H-Apn"/>
+                                                <constraint firstAttribute="height" constant="30" id="i5f-Dd-Njv"/>
+                                            </constraints>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="favor-icon" title=""/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="vmx-RB-Fbu" eventType="touchUpInside" id="z6i-JQ-et1"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="DQW-5N-PoT" firstAttribute="bottom" secondItem="Okw-UV-otG" secondAttribute="bottomMargin" id="145-DX-6VY"/>
+                                        <constraint firstItem="qCf-LP-zXR" firstAttribute="leading" secondItem="gUF-5R-JTe" secondAttribute="trailing" constant="10" id="4Gh-UC-7Xs"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="qCf-LP-zXR" secondAttribute="trailing" constant="10" id="Ky5-9U-2lz"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="qCf-LP-zXR" secondAttribute="trailing" constant="10" id="REM-uj-0XN"/>
                                         <constraint firstItem="DQW-5N-PoT" firstAttribute="top" secondItem="Ffe-T4-VJE" secondAttribute="bottom" constant="4" id="Rvc-Yb-r1U"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="gUF-5R-JTe" secondAttribute="bottom" constant="10" id="STS-l4-KMz"/>
                                         <constraint firstItem="Ffe-T4-VJE" firstAttribute="top" secondItem="Okw-UV-otG" secondAttribute="top" id="amX-vb-kqc"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="gUF-5R-JTe" secondAttribute="bottom" constant="10" id="d6b-ZE-CJ3"/>
+                                        <constraint firstItem="qCf-LP-zXR" firstAttribute="top" secondItem="DQW-5N-PoT" secondAttribute="bottom" constant="10" id="eDM-l3-JY0"/>
+                                        <constraint firstItem="qCf-LP-zXR" firstAttribute="leading" secondItem="gUF-5R-JTe" secondAttribute="trailing" constant="10" id="fUV-Gd-Dmx"/>
                                         <constraint firstItem="Ffe-T4-VJE" firstAttribute="leading" secondItem="b9U-iO-C17" secondAttribute="trailing" constant="8" id="g2m-4B-Kms"/>
                                         <constraint firstItem="b9U-iO-C17" firstAttribute="leading" secondItem="Okw-UV-otG" secondAttribute="leading" id="ief-g4-vM7"/>
                                         <constraint firstItem="b9U-iO-C17" firstAttribute="top" secondItem="Okw-UV-otG" secondAttribute="top" id="kDn-SV-Heg"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="qCf-LP-zXR" secondAttribute="bottom" constant="10" id="l9U-Nb-SRp"/>
                                         <constraint firstItem="DQW-5N-PoT" firstAttribute="trailing" secondItem="Okw-UV-otG" secondAttribute="trailingMargin" id="qkj-kb-PIZ"/>
                                         <constraint firstItem="DQW-5N-PoT" firstAttribute="leading" secondItem="b9U-iO-C17" secondAttribute="trailing" constant="8" id="slT-HV-8k2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="qCf-LP-zXR" secondAttribute="bottom" constant="10" id="tKK-Lz-rCb"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="qCf-LP-zXR" id="WXO-93-Tt4"/>
                                     <outlet property="profileImageView" destination="b9U-iO-C17" id="VFb-UQ-qbU"/>
+                                    <outlet property="retweetButton" destination="gUF-5R-JTe" id="qFe-Zl-J6V"/>
                                     <outlet property="tweetContent" destination="DQW-5N-PoT" id="2MY-NT-chF"/>
                                     <outlet property="userNameLabel" destination="Ffe-T4-VJE" id="teh-Y2-TTH"/>
                                 </connections>
@@ -117,11 +158,66 @@
                                 <action selector="onLogout:" destination="WW1-BT-TMM" id="2He-jT-DVs"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="Tqw-NQ-L1D">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="gAN-tN-oSF" kind="presentation" id="k8t-PG-7zh"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xtl-Ks-yqo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1800.8" y="178.56071964017991"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="Sno-qc-KjE">
+            <objects>
+                <viewController id="PnP-yN-LGF" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Vg-6G-fVw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2Y2-zR-ddr">
+                                <rect key="frame" x="0.0" y="44" width="375" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="x51-Sa-YwI"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="GsO-pS-E3Z"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2Y2-zR-ddr" firstAttribute="leading" secondItem="GsO-pS-E3Z" secondAttribute="leading" id="fsq-K6-l0p"/>
+                            <constraint firstItem="GsO-pS-E3Z" firstAttribute="trailing" secondItem="2Y2-zR-ddr" secondAttribute="trailing" id="irC-Pc-5gb"/>
+                            <constraint firstItem="2Y2-zR-ddr" firstAttribute="top" secondItem="GsO-pS-E3Z" secondAttribute="top" id="nMT-Pc-j1o"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="yOH-VN-Txc">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="GvK-yT-l6f">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="PnP-yN-LGF" id="M1W-s2-12K"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="x7H-SM-q5Q">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="PnP-yN-LGF" id="Y5z-mM-GTZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="2Y2-zR-ddr" id="bog-vt-COf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GW8-Gg-TOw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3399.1999999999998" y="-80.50974512743629"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="g6c-d2-Xch">
@@ -155,8 +251,33 @@
             </objects>
             <point key="canvasLocation" x="882" y="179"/>
         </scene>
+        <!--Tweet Navigation Controller-->
+        <scene sceneID="YBd-3N-jCX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="gAN-tN-oSF" userLabel="Tweet Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6lY-9f-LbG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.1117031798" green="0.63071233029999996" blue="0.94986075160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.1117031798" green="0.63071233029999996" blue="0.94986075160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="PnP-yN-LGF" kind="relationship" relationship="rootViewController" id="N4x-M1-k84"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Ur-fp-Np0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2460" y="-80.50974512743629"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
